<resources>
    <string name="app_name">CloneSpotify</string>
    <string name="millions_of_songs_nfree_on_spotify">Millions of songs.\nFree on Spotify.</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="spotify">Spotify</string>
    <string name="musics_for_everyone">Musics for everyone</string>
    <string name="log_in_to_spotify">Log in to Spotify</string>
    <string name="sign_up_title">Create Account</string>
    <string name="logo_image_description">App Logo</string>
    <string name="email_or_username_label">Email or username</string>
    <string name="email_hint_example">jenny123@example.com</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="example_email">example123@gmail.com</string>
    <string name="sign_up_value">Email or phone number</string>
    <string name="sign_in_label">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="spotifyicon">SpotifyIcon</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_link_underlined">
<![CDATA[ <U>Sign up</U> ]]>
</string>
    <string name="sign_in_link_underlined">
<![CDATA[ <U>Sign in</U> ]]>
</string>
    <string name="good_evening">Good evening</string>
    <string name="notification">notification</string>
    <string name="history">history</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="podcasts">Podcasts</string>
    <string name="user_image">user image</string>
    <string name="narrated_for_you">Narrated For You</string>
    <string name="albumImage">albumImage</string>
    <string name="let_me_down_slowly">Let Me Down Slowly (feat. Alessia Cara)</string>
    <string name="lover">Lover</string>
    <string name="arialb">AriAlb</string>
    <string name="eternal_sunshine_deluxe_brighter_days_ahead">eternal sunshine deluxe: brighter days ahead</string>
    <string name="sample_title">Sample title</string>
    <string name="made_for_you">Made for you</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="home_button">home_button</string>
    <string name="search_button">search_button</string>
    <string name="library_button">library_button</string>
    <string name="create_button">create_button</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="current_song">current_song</string>
    <string name="twilight_zone">twilight zone</string>
    <string name="ariana_grande">Ariana Grande</string>
    <string name="connect_to_device">connect to device</string>
    <string name="play_pause_buttons">play pause buttons</string>
</resources>