<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_max="488dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/spotify_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/be_vietnam_pro_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/email_or_username_label"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/example_email"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:inputType="textEmailAddress|text"
                android:padding="10dp"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/password_label"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/confirm_password"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_passwordLabel"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="40dp"
            app:boxCornerRadiusBottomStart="40dp"
            app:boxCornerRadiusTopEnd="40dp"
            app:boxCornerRadiusTopStart="40dp"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_passwordField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUpClickAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:backgroundTint="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_light"
            android:text="@string/already_have_account"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/signInOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_light"
            android:text="@string/sign_in_label"
            android:textColor="@color/white"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="40dp"
            android:paddingTop="3dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>